force-app/main/default/objects/Prometheion_Evidence_Item__c/Prometheion_Evidence_Item__c.object-meta.xml
<CustomObject>
    <label>Prometheion Evidence Item</label>
    <pluralLabel>Prometheion Evidence Items</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Evidence Item Number</label>
        <displayFormat>EI-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Individual evidence items linked to audit packages and framework mappings</description>
    <fields>
        <fullName>Evidence_Type__c</fullName>
        <label>Evidence Type</label>
        <type>Picklist</type>
        <required>true</required>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>SETUP_AUDIT_TRAIL</fullName><default>false</default><label>Setup Audit Trail</label></value>
                <value><fullName>FIELD_HISTORY</fullName><default>false</default><label>Field History</label></value>
                <value><fullName>PERMISSION_SET</fullName><default>false</default><label>Permission Set</label></value>
                <value><fullName>SHARING_RULE</fullName><default>false</default><label>Sharing Rule</label></value>
                <value><fullName>LOGIN_HISTORY</fullName><default>false</default><label>Login History</label></value>
                <value><fullName>API_USAGE</fullName><default>false</default><label>API Usage</label></value>
                <value><fullName>FLOW_EXECUTION</fullName><default>false</default><label>Flow Execution</label></value>
                <value><fullName>METADATA_CHANGE</fullName><default>false</default><label>Metadata Change</label></value>
                <value><fullName>DOCUMENT</fullName><default>false</default><label>Document</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evidence_Date__c</fullName>
        <label>Evidence Date</label>
        <type>Date</type>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    <fields>
        <fullName>Evidence_Data__c</fullName>
        <label>Evidence Data (JSON)</label>
        <type>LongTextArea</type>
        <length>131072</length>
    </fields>
    <fields>
        <fullName>File_Reference__c</fullName>
        <label>File Reference</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <required>true</required>
        <defaultValue>COLLECTED</defaultValue>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>COLLECTED</fullName><default>true</default><label>Collected</label></value>
                <value><fullName>REVIEWED</fullName><default>false</default><label>Reviewed</label></value>
                <value><fullName>APPROVED</fullName><default>false</default><label>Approved</label></value>
                <value><fullName>REJECTED</fullName><default>false</default><label>Rejected</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Package__c</fullName>
        <label>Audit Package</label>
        <type>Lookup</type>
        <referenceTo>Prometheion_Audit_Package__c</referenceTo>
        <relationshipLabel>Evidence Items</relationshipLabel>
        <relationshipName>Evidence_Items</relationshipName>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Framework_Mapping__c</fullName>
        <label>Framework Mapping</label>
        <type>Lookup</type>
        <referenceTo>Prometheion_Framework_Mapping__c</referenceTo>
        <relationshipLabel>Evidence Items</relationshipLabel>
        <relationshipName>Evidence_Items</relationshipName>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <label>Reviewed By</label>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Evidence Reviews</relationshipLabel>
        <relationshipName>Evidence_Reviews</relationshipName>
    </fields>
    <fields>
        <fullName>Reviewed_Date__c</fullName>
        <label>Reviewed Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>