force-app/main/default/objects/Prometheion_Evidence_Item__c/fields/Audit_Package__c.field-meta.xml
<CustomField>
    <fullName>Audit_Package__c</fullName>
    <label>Audit Package</label>
    <type>Lookup</type>
    <referenceTo>Prometheion_Audit_Package__c</referenceTo>
    <relationshipLabel>Evidence Items</relationshipLabel>
    <relationshipName>Evidence_Items</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>