force-app/main/default/objects/Prometheion_Evidence_Item__c/fields/Evidence_Date__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Date__c</fullName>
    <label>Evidence Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>