force-app/main/default/objects/Prometheion_Evidence_Item__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <label>Reviewed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Evidence Reviews</relationshipLabel>
    <relationshipName>Evidence_Reviews</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>