force-app/main/default/objects/Prometheion_Evidence_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COLLECTED</fullName>
                <default>true</default>
                <label>Collected</label>
            </value>
            <value>
                <fullName>REVIEWED</fullName>
                <label>Reviewed</label>
            </value>
            <value>
                <fullName>APPROVED</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>REJECTED</fullName>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>